# python-project-tutorial

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/python_project_tutorial/: __init__.py  calc.py
tests/python-project-tutorial/: test_calc.py  test_hello.py
